--- a/index.html
+++ b/index.html
@@ -425,8 +425,9 @@
               </div>
               <h3 class="gsap-reveal-hero">Django Developer</h3>
               <p class="gsap-reveal-hero">
-                Completed a two-month <b>Django</b> course with certifications in web
-                development. Ready to tackle new challenges with expertise.
+                Completed a two-month <b>Django</b> course with certifications
+                in web development. Ready to tackle new challenges with
+                expertise.
               </p>
             </div>
           </div>
@@ -457,8 +458,8 @@
               </div>
               <h3 class="gsap-reveal-hero">FrontEnd Development</h3>
               <p class="gsap-reveal-hero">
-                Received a Certificate in <b>Frontend Development</b>, showcasing
-                proficiency in web development utilizing the Frontend
+                Received a Certificate in <b>Frontend Development</b>,
+                showcasing proficiency in web development utilizing the Frontend
                 Development framework after completing an intensive training
                 program.
               </p>
@@ -486,15 +487,14 @@
             <div class="service text-center">
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"
-                  ><img
-                    src="images/MERN.jpg"
-                    alt="Image"
-                    style="width: 200px"
+                  ><img src="images/MERN.jpg" alt="Image" style="width: 200px"
                 /></span>
               </div>
               <h3 class="gsap-reveal-hero">MERN STACK</h3>
               <p class="gsap-reveal-hero">
-                Completed a two-month <b>MERNSTACK</b> course with certifications in web development. Ready to tackle new challenges with expertise
+                Completed a two-month <b>MERNSTACK</b> course with
+                certifications in web development. Ready to tackle new
+                challenges with expertise
               </p>
             </div>
           </div>
@@ -510,12 +510,13 @@
               </div>
               <h3 class="gsap-reveal-hero">ChatGPT For Befinners</h3>
               <p class="gsap-reveal-hero">
-                Received a Certificate in <b>ChatGPT for Beginners</b>, showcasing
-                proficiency in utilizing ChatGPT for various applications after
-                completing an intensive training program
+                Received a Certificate in <b>ChatGPT for Beginners</b>,
+                showcasing proficiency in utilizing ChatGPT for various
+                applications after completing an intensive training program
               </p>
             </div>
           </div>
+
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
             <div class="service text-center">
               <div class="gsap-reveal-hero mb-3">
@@ -528,10 +529,30 @@
               </div>
               <h3 class="gsap-reveal-hero">Linux Operations</h3>
               <p class="gsap-reveal-hero">
-                Received a Certificate in Linux Operations, showcasing proficiency in utilizing <b>Linux</b> for various tasks and operations after completing an intensive training program.
+                Received a Certificate in Linux Operations, showcasing
+                proficiency in utilizing <b>Linux</b> for various tasks and
+                operations after completing an intensive training program.
               </p>
             </div>
           </div>
+
+          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
+            <div class="service text-center">
+              <div class="gsap-reveal-hero mb-3">
+                <span class="icon-service"
+                  ><img
+                    src="images/Anaconda.jpg"
+                    alt="Image"
+                    style="width: 200px"
+                /></span>
+              </div>
+              <h3 class="gsap-reveal-hero">Anaconda Python</h3>
+              <p class="gsap-reveal-hero">
+                Received a Certificate in Anaconda Python, showcasing proficiency in utilizing Anaconda Python for various tasks and operations after completing an intensive training program.
+              </p>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -988,142 +1009,7 @@
     </div>
 
     <div class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <div class="widget">
-              <h3>
-                <img
-                  src="/images/Footer/shortcut.gif"
-                  style="max-width: 30px"
-                  alt=""
-                />
-                Shortcut
-              </h3>
-              <ul class="list-unstyled float-left links">
-                <li><a href="#home-section">Home</a></li>
-                <li><a href="#portfolio-section">Recent Works</a></li>
-                <li><a href="#about-section">About Me</a></li>
-                <li><a href="#services-section">What i Do</a></li>
-                <li><a href="#contact-section">Reach Me</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="widget">
-              <h3>
-                <img
-                  src="/images/Footer/Projects.gif"
-                  style="max-width: 25px"
-                  alt=""
-                />
-                Projects
-              </h3>
-              <ul class="list-unstyled float-left links">
-                <li>
-                  <a href="https://www.pioneersoftware.com.np/" target="_blank"
-                    >Business Site</a
-                  >
-                </li>
-                <li>
-                  <a href="https://www.axissolutions.com.np/" target="_blank"
-                    >Business Site</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://sonalcopyproduction.netlify.app/"
-                    target="_blank"
-                    >Business Site</a
-                  >
-                </li>
-                <li>
-                  <a href="https://www.ganeshmansingh.edu.np/" target="_blank"
-                    >Education Site</a
-                  >
-                </li>
-                <li>
-                  <a href="https://nepalicinema.vercel.app/" target="_blank"
-                    >Movie App</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="widget">
-              <h3>
-                <img
-                  src="/images/Footer/services.gif"
-                  style="max-width: 40px"
-                  alt=""
-                />
-                Services
-              </h3>
-              <ul class="list-unstyled float-left links">
-                <li><a href="#">Web Development</a></li>
-                <li><a href="#">E-Commerce Development</a></li>
-                <li><a href="#">Web Design</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="widget">
-              <h3>
-                <i class="ri-phone-fill"></i
-                ><img
-                  src="/images/Footer/contactme.gif"
-                  style="max-width: 50px"
-                  alt=""
-                />
-                Contact
-              </h3>
-              <address>
-                <a
-                  href="https://www.google.com/maps/place/Kathmandu+44600/@27.7090302,85.2849329,13z/data=!3m1!4b1!4m6!3m5!1s0x39eb198a307baabf:0xb5137c1bf18db1ea!8m2!3d27.7172453!4d85.3239605!16zL20vMDRjeDU?entry=ttu"
-                  target="_blank"
-                  >Kathmandu , Nepal</a
-                >
-              </address>
-              <ul class="list-unstyled links mb-4">
-                <li><a href="tel://9863588895">+977-9863588895</a></li>
-                <li>
-                  <a href="mailto:info@mydomain.com"
-                    >iamompandey.it@gmail.com</a
-                  >
-                </li>
-              </ul>
-
-              <h3>Connect</h3>
-              <ul class="list-unstyled social">
-                <li>
-                  <a href="https://www.instagram.com/_its.ompandey/"
-                    ><span class="icon-instagram"></span
-                  ></a>
-                </li>
-                <li>
-                  <a href="https://twitter.com/omeydev"
-                    ><span class="icon-twitter"></span
-                  ></a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/its.ompandey/"
-                    ><span class="icon-facebook"></span
-                  ></a>
-                </li>
-                <li>
-                  <a href="https://www.linkedin.com/in/om-pandey-511818277/"
-                    ><span class="icon-linkedin"></span
-                  ></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
+      <div class="container">         
         <div class="row mt-5">
           <div class="col-12 text-center">
             <p class="mb-0">
@@ -1179,5 +1065,45 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1859761208513074"
       crossorigin="anonymous"
     ></script>
+    <script>
+      // Disable right-click
+      document.addEventListener("contextmenu", (e) => e.preventDefault());
+
+      // Function to handle keydown events
+      function disableKeys(e) {
+        // Disable F12
+        if (e.keyCode === 123) {
+          e.preventDefault();
+          return false;
+        }
+
+        // Disable Ctrl+Shift+I, Ctrl+Shift+J, Ctrl+Shift+C, Ctrl+U
+        if (
+          e.ctrlKey &&
+          e.shiftKey &&
+          (e.keyCode === 73 || e.keyCode === 74 || e.keyCode === 67)
+        ) {
+          e.preventDefault();
+          return false;
+        }
+
+        if (e.ctrlKey && e.keyCode === 85) {
+          e.preventDefault();
+          return false;
+        }
+      }
+
+      // Add the event listener
+      document.addEventListener("keydown", disableKeys);
+
+      // Disable developer tools (this may not work in all browsers)
+      function disableDevTools() {
+        if (window.devtools.isOpen) {
+          window.location.href = "about:blank";
+        }
+      }
+
+      setInterval(disableDevTools, 1000);
+    </script>
   </body>
 </html>
