--- a/index.html
+++ b/index.html
@@ -630,33 +630,19 @@
                 </p>
 
                 <p class="leading-relaxed">
-                  When I'm not soaking in the serenity of the Himalayas, you can
-                  find me diving headfirst into the exhilarating world of web
-                  development 💻. My journey in tech is fueled by curiosity and
-                  a love for crafting digital experiences that make a
-                  difference.
+                  When I’m not chilling in the peaceful vibes of the Himalayas, I’m busy jumping into the exciting world of web development 💻. My tech journey is all about curiosity and having fun while building cool digital stuff that actually helps people.
                 </p>
 
                 <p class="leading-relaxed">
-                  I bring a unique blend of technical expertise and creative
-                  problem-solving to every project. Whether it's building robust
-                  backend systems or crafting intuitive user interfaces, I'm
-                  always excited to take on new challenges 🚀.
+                  I mix tech smarts with creative thinking to tackle every project. Whether it’s building strong backend systems or designing easy-to-use interfaces, I’m always pumped to take on new challenges 🚀
                 </p>
 
                 <p class="leading-relaxed">
-                  But it's not all serious business - I believe in adding a
-                  touch of humor to everything I do! When I'm not crafting
-                  digital masterpieces, you might find me attempting to teach my
-                  cat to code (spoiler: not going well 😄) or exploring new
-                  technologies with a cup of Nepali tea ☕.
+                  But hey, it’s not all work and no play! I love adding a splash of humor to everything I do. When I’m not busy creating digital wonders, you might catch me trying (and failing) to teach my cat to code 😄 or geeking out over new tech with a cup of Nepali tea ☕.
                 </p>
 
                 <p class="leading-relaxed">
-                  Let's create something amazing together! Whether you have a
-                  specific project in mind or just want to explore
-                  possibilities, I'm always open to new adventures in the
-                  digital realm 🌟.
+                  Let’s make something awesome together! Whether you’ve got a project idea or just want to explore the possibilities, I’m always up for new adventures in the digital world 🌟.
                 </p>
               </div>
 
