--- a/index.html
+++ b/index.html
@@ -51,21 +51,9 @@
     <link rel="stylesheet" href="Assests/styles.css">
     <link rel="stylesheet" href="Assests/loder.css">
 
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.0/dist/locomotive-scroll.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.0/dist/locomotive-scroll.min.js"></script>
-
     
   </head>
 
-
-  <script>
-        document.addEventListener('DOMContentLoaded', function () {
-          const scroll = new LocomotiveScroll({
-            el: document.body, // Apply smooth scrolling to the entire body
-            smooth: true, // Enable smooth scrolling
-          });
-        });
-      </script>
 
   <!-- Loader -->
   <div id="overlayer">
@@ -79,7 +67,7 @@
 
   
 
-  <body class="overflow-x-hidden"  data-scroll-container >
+  <body class="overflow-x-hidden">
 
 
     <!-- Background Effects -->
