--- a/index.html
+++ b/index.html
@@ -1740,13 +1740,13 @@
             <a href="https://github.com/ompandey07" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
                 <i class="ri-github-line text-2xl text-gray-400/70 group-hover:text-[#333] transition-colors"></i>
             </a>
-            <a href="https://www.linkedin.com/in/om-pandey-647844305/" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
+            <a href="https://www.linkedin.com/in/iamompandey/" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
                 <i class="ri-linkedin-line text-2xl text-gray-400/70 group-hover:text-[#0077b5] transition-colors"></i>
             </a>
             <a href="https://x.com/OPandey36030" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
                 <i class="ri-twitter-line text-2xl text-gray-400/70 group-hover:text-[#1da1f2] transition-colors"></i>
             </a>
-            <a href="https://www.instagram.com/omespark/" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
+            <a href="https://www.instagram.com/_iam.ompandey/" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
                 <i class="ri-instagram-line text-2xl text-gray-400/70 group-hover:text-[#e4405f] transition-colors"></i>
             </a>
         </div>
