--- a/index.html
+++ b/index.html
@@ -1743,7 +1743,7 @@
             <a href="https://www.linkedin.com/in/iamompandey/" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
                 <i class="ri-linkedin-line text-2xl text-gray-400/70 group-hover:text-[#0077b5] transition-colors"></i>
             </a>
-            <a href="https://x.com/OPandey36030" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
+            <a href="https://x.com/iam_ompandey" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
                 <i class="ri-twitter-line text-2xl text-gray-400/70 group-hover:text-[#1da1f2] transition-colors"></i>
             </a>
             <a href="https://www.instagram.com/_iam.ompandey/" target="_blank" class="w-12 h-12 bg-white/[0.02] flex items-center justify-center group hover:-translate-y-1 transition-transform">
