--- a/index.html
+++ b/index.html
@@ -1688,7 +1688,7 @@
         </a>
 
         <!-- Email -->
-        <a href="mailto:iamompandey.it@gmail.com" class="bg-white/[0.02] p-6 group hover:border-red-500 border border-transparent transition-all hover:-translate-y-1">
+        <a href="mailto:admin@omkumarpandey.com.np" class="bg-white/[0.02] p-6 group hover:border-red-500 border border-transparent transition-all hover:-translate-y-1">
           <div class="flex items-start gap-4">
             <div class="w-12 h-12 flex items-center justify-center bg-white/5">
               <i class="ri-mail-line text-2xl text-gray-400 group-hover:text-red-500 transition-colors"></i>
@@ -1696,7 +1696,7 @@
             <div>
               <p class="text-sm text-gray-400">Email</p>
               <p class="text-base mt-1 group-hover:text-red-500 transition-colors">
-                iamompandey.it@gmail.com
+                admin@omkumarpandey.com.np
               </p>
             </div>
           </div>
