--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
     <link rel="stylesheet" href="Assests/styles.css">
     <link rel="stylesheet" href="Assests/loder.css">
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P7BH5VTE5S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P7BH5VTE5S');
+</script>
+
     <style>
       :root {
         --naruto-orange: #FF7800;
